--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,73 @@
+@mixin roundedCorners($radius: 100%){
+    -moz-border-radius: $radius;
+    -webkit-border-radius: $radius;
+    border-radius: $radius;
+
+}
+button{
+    float: right;
+}
+.circle{
+    @include roundedCorners();
+    background-color: purple;
+}
+.control{
+    display: block;
+    margin: 15px;
+}
+h3{
+    padding-left: 10px;
+}
+input{
+    margin-left: 10px;
+    width: 70px;
+}
+label{
+    display: inline-block;
+    width: 90px;
+}
+#leftBar{
+    width: 40%;
+    height: 600px;
+    border: 1px solid black;
+    display: inline-block;
+    background-color: #D0D0D0;
+}
+#pad{
+    position: relative;
+    width: 600px;
+    height: 600px;
+    border: 1px solid black;
+    float: left;
+    background-color: #37474F;
+}
+.pg-wrapper{
+    display: block;
+    position: relative;
+    width: 1200px;
+    margin: 0 auto;
+}
+.shape{
+    position: absolute;
+}
+span{
+    float: right;
+    margin-right: 25px;
+}
+.triangle{
+	width: 0;
+	height: 0;
+	border-bottom-style: solid;
+    border-bottom-color: yellow;
+	border-right-style: solid;
+    border-right-color: transparent;
+}
+
+
+
+
+/*
+
 * {
     box-sizing: border-box;
 }
@@ -21,7 +91,7 @@ $inputs-height: 3em;
 
     button {
         border: none;
-        background-color: fuchsia;
+        background-color: red;
         color: white;
         height: $inputs-height;
         width: 100%;
@@ -31,7 +101,7 @@ $inputs-height: 3em;
 
 #shapes-container {
     overflow: hidden;
-    background-color: black;
+    background-color: #76F8FF;
     height: 600px;
     width: 600px;
     float: right;
@@ -42,15 +112,15 @@ $inputs-height: 3em;
     }
 
     .square {
-        background: orange;
+        background: #F7928A;
     }
 
     .rectangle {
-        background-color: green;
+        background-color: #D4E85A;
     }
 
     .circle {
-        background: pink;
+        background: #E5FFF0;
         border-radius: 50%;
     }
 
@@ -66,3 +136,5 @@ $inputs-height: 3em;
     color: white;
     padding: 2em;
 }
+
+*/
