--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ button {
   -moz-border-radius: 100%;
   -webkit-border-radius: 100%;
   border-radius: 100%;
-  background-color: purple; }
+  background-color: #E5FFF0; }
 
 .control {
   display: block;
@@ -27,7 +27,7 @@ label {
   height: 600px;
   border: 1px solid black;
   display: inline-block;
-  background-color: #D0D0D0; }
+  background-color: #fff; }
 
 #pad {
   position: relative;
@@ -35,7 +35,7 @@ label {
   height: 600px;
   border: 1px solid black;
   float: left;
-  background-color: #37474F; }
+  background-color: #76F8FF; }
 
 .pg-wrapper {
   display: block;
@@ -57,6 +57,12 @@ span {
   border-bottom-color: yellow;
   border-right-style: solid;
   border-right-color: transparent; }
+
+#info-container {
+  clear: both;
+  background-color: black;
+  color: white;
+  padding: 2em; }
 
 /*
 
