--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ span {
   width: 0;
   height: 0;
   border-bottom-style: solid;
-  border-bottom-color: yellow;
+  border-bottom-color: #FFCB6F;
   border-right-style: solid;
   border-right-color: transparent; }
 
